Widen user list to stop full names wrapping

--- a/app/assets/stylesheets/application/modules/molecules/_user_list.scss
+++ b/app/assets/stylesheets/application/modules/molecules/_user_list.scss
@@ -5,7 +5,7 @@
   width: 100%;
 
   @media #{$from-medium} {
-    width: 50%;
+    width: 60%;
   }
 }
 
